Eliminate ECS, with just a domain system